--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.jpa.hibernate.ddl-auto=update
+spring.devtools.restart.enabled=true
 spring.datasource.url=jdbc:mysql://localhost:3306/boot?serverTimezone=UTC
 spring.datasource.username=root2
 spring.datasource.password=6744
